[project]
name = "plastic"
version = "0.1.0"
description = ""
authors = [
    {name = "aradng",email = "aradarang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "sympy (>=1.13.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
